# haskellStuff

./: Dockerfile  Hello.hi  InteractiveDOubling.hs  Main  Main.hi  Main.hs  README.md  Tree.hs  VarFun.hs  bonjourWorld  thingamie.hi
cis194/: Calc.hs  (+9 more)
haskellBook/ch15/: README.md  ch15.cabal
haskellBook/ch15/src/: Main.hs
haskellBook/ch24/: ch24.cabal
haskellBook/ch24/.stack-work/install/x86_64-linux/lts-8.8/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuasiText-0.1.2.6-7DjzPb1KbDIGKBmesCALCF  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-7bX590WM0JqI4H9GMcNEBq  aeson-1.0.2.1-1KnhFZCv1HHECoucZF8QxN  ansi-terminal-0.6.2.3-4HPxin1iv6RAndS8lH3nzo  ansi-wl-pprint-0.6.7.3-3GSHFrIr1fs45bsgKkZbLF  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  attoparsec-0.13.1.0-KwckfZOQnr04d9ofoJ9Hh4  base-compat-0.9.2-6QxKnlgzGYzLT4ZO71q1el  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  bifunctors-5.4.1-LZeQTL0Uaws6v2aJY5STuc  blaze-builder-0.4.0.2-CGB8BvrFgghHy5bLy0SFOg  blaze-html-0.8.1.3-4x5sR7CihaZBuBa398ibiy  blaze-markup-0.7.1.1-7tIWNv8iALFJhJ4kVxNmNT  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  ch24-0.1.0.0  charset-0.3.7.1-LhYDJhbmG13BRL55LkvrSl  checkers-0.4.6-9JlQ7Pj0roFCSTH3gvT7C0  comonad-5-BYydH82fZIS1vK4HJ9v9HH  contravariant-1.4-3UCY3arLvoG71jrGOYoc39  cpphs-1.20.4-GWE35ntSMdiKUT7JkXSjHw  distributive-0.5.2-JCgfTXNR3ywAyV7fFWIBI5  dlist-0.8.0.2-6Wnps4GD7EFnRucVzXIFD  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fingertree-0.1.1.0-Aiaf912zjZGHvH3XyjxrYA  free-4.12.4-C89MffdE5zK8lCuYhh5BJR  happy-1.19.5  hashable-1.2.6.0-3EXxoqeEgbfAKr6aGkye6x  haskell-src-exts-1.18.2-BiKw9earqywBz8TBYDGQjo  (+45 more)
haskellBook/ch24/src/: AltParsing.hs  BT.hs  Exercises.hs  Fractions.hs  Ini.hs  LearnParsers.hs  Marshalling.hs  WantedStrict.hs
(+290 files in other folders)
