name:                ch15
version:             0.1.0.0
homepage:            https://github.com/githubuser/ch15#readme
license:             BSD3
license-file:        LICENSE
author:              Philip J Weir
maintainer:          weirp@acm.org
copyright:           2017 Philip J Weir
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ch15
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
