name:                ch24
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch24#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ch24
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , checkers
                     , trifecta
                     , transformers
                     , QuasiText
                     , raw-strings-qq
                     , hspec
                     , bytestring
                     , text
                     , containers
                     , attoparsec
                     , parsec
                     , aeson
                     , scientific
                     
                     
